--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.my-config {
+  --uc-primary-oklch-dark: 69% 0.1768 258.4;
+  --uc-primary-oklch-light: 59% 0.22 264;
+}
 
-body{
+body {
   background-color: #151719;
   color: white;
 }
